--- a/Resources/views/Main/home.html.twig
+++ b/Resources/views/Main/home.html.twig
@@ -7,7 +7,7 @@
         <div class="carousel-inner">
 
             {% for banner in banners %}
-            <div class="item active" style="background-image: url({{ path('tec_ayt_portal_download', {'id': banner.bannerId, 'class': 'Banner'}) }})">
+            <div class="item {% if loop.index == 1 %}active{% endif %}" style="background-image: url({{ path('tec_ayt_portal_download', {'id': banner.bannerId, 'class': 'Banner'}) }})">
             </div><!--/.item-->
             {% endfor %}
 
@@ -43,7 +43,7 @@
         <div class="row">
             <div class="col-xs-12 col-sm-4 col-md-3">
                 <div class="recent-work-wrap">
-                    <img class="img-responsive" src="{{ path('tec_ayt_portal_download', {'id': content.contentId, 'class': 'Content'}) }}" alt="">
+                    <img class="img-responsive gallery" src="{{ path('tec_ayt_portal_download', {'id': content.contentId, 'class': 'Content'}) }}" alt="">
                     <div class="overlay">
                         <div class="recent-work-inner">
                             <h3><a href="#">{{ content.name }}</a> </h3>
@@ -149,11 +149,11 @@
         </div>
 
         <div class="partners">
-            <ul>
-                {% for sponsor in sponsors %}
-                <li> <a href="{{ sponsor.url }}"><img class="img-responsive wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms" src="{{ path('tec_ayt_portal_download', {'id': sponsor.sponsorId, 'class': 'Sponsor'}) }}"></a></li>
-                {% endfor %}
-            </ul>
+            {% for sponsor in sponsors %}
+                <div class="col-md-2">
+                     <a href="{{ sponsor.url }}"><img class="img-responsive wow fadeInDown partner-img" data-wow-duration="1000ms" data-wow-delay="300ms" src="{{ path('tec_ayt_portal_download', {'id': sponsor.sponsorId, 'class': 'Sponsor'}) }}"></a>
+                </div>
+            {% endfor %}
         </div>
     </div><!--/.container-->
 </section><!--/#partner-->
