--- a/Resources/views/Main/about.html.twig
+++ b/Resources/views/Main/about.html.twig
@@ -181,7 +181,7 @@
                         <div class="single-profile-bottom wow fadeInUp" data-wow-duration="1000ms" data-wow-delay="600ms">
                             <div class="media">
                                 <div class="pull-left">
-                                    <a href="#"><img class="media-object" src="{{ asset('bundles/tecaytportal/images/Anita.jpg')}}" alt=""></a>
+                                    <a href="#"><img class="media-object" src="{{ asset('bundles/tecaytportal/images/Anita.JPG')}}" alt=""></a>
                                 </div>
                                 <div class="media-body">
                                     <h5>Ana María Rodríguez Hernández</h5>
