--- a/Resources/views/Main/home.html.twig
+++ b/Resources/views/Main/home.html.twig
@@ -36,7 +36,7 @@
 <section id="recent-works">
     <div class="container">
         <div class="center wow fadeInDown">
-            <h2>Imagenes Resientes</h2>
+            <h2>Imagenes Recientes</h2>
         </div>
 
         {% for content in contents %}
