--- a/Resources/views/Main/contact.html.twig
+++ b/Resources/views/Main/contact.html.twig
@@ -57,9 +57,10 @@
                             <li class="col-sm-12">
                                 <address>
                                     <h4>Escuela de Gobierno y Transformación Pública</h4>
-                                    <p>Eugenio Garza Lagüera y Rufino Tamayo, Valle Oriente <br>
+                                    <p><i class="fa fa-map-marker"></i> Eugenio Garza Lagüera y Rufino Tamayo, Valle Oriente
                                         66269 San Pedro Garza García, N.L.</p>
-                                    <p>Teléfono: 01 81 8625 8300</p>
+                                    <p><i class="fa fa-phone"></i> Teléfono: 81 147 48 655</p>
+                                    <p><i class="fa fa-envelope"></i> Email: amaytrasciende@gmail.com</p>
                                 </address>
                             </li>
                         </ul>
