--- a/Resources/views/Common/layout.html.twig
+++ b/Resources/views/Common/layout.html.twig
@@ -14,6 +14,7 @@
         <link href="{{ asset('bundles/tecaytportal/css/prettyPhoto.css') }}" rel="stylesheet">
         <link href="{{ asset('bundles/tecaytportal/css/main.css') }}" rel="stylesheet">
         <link href="{{ asset('bundles/tecaytportal/css/responsive.css') }}" rel="stylesheet">
+        <link href="{{ asset('bundles/tecaytportal/css/login-register.css') }}" rel="stylesheet" />
         <!--[if lt IE 9]>
         <script src="{{ asset('bundles/tecaytportal/js/html5shiv.js') }}"></script>
         <script src="{{ asset('bundles/tecaytportal/js/respond.min.js') }}"></script>
@@ -39,6 +40,7 @@
 
 </div><!-- ./wrapper -->
 {% block footerAssets %}
+    <script src="{{ asset('bundles/tecaytportal/js/login-register.js')}}" type="text/javascript"></script>
     <script src="{{ asset('bundles/tecaytportal/js/jquery.js')}}"></script>
     <script src="{{ asset('bundles/tecaytportal/js/bootstrap.min.js')}}"></script>
     <script src="{{ asset('bundles/tecaytportal/js/jquery.prettyPhoto.js')}}"></script>
