--- a/Resources/views/Main/about.html.twig
+++ b/Resources/views/Main/about.html.twig
@@ -47,15 +47,15 @@
             </div>
             <div class="row">
 
-                <div class="col-sm-2 col-sm-offset-1">
+                <div class="col-md-2 col-md-offset-1 col-sm-4">
                     <div class="sinlge-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
-                        <div class="joomla-skill">
+                        <div class="ama-skill">
                             <p>Asegurar la sustentabilidad de la asociación</p>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-sm-2">
+                <div class="col-md-2 col-sm-4">
                     <div class="sinlge-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="300ms">
                         <div class="joomla-skill">
                             <p>Fomentar el bienestar integral de los asociados en particular, y del adulto mayor en general</p>
@@ -63,7 +63,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-2">
+                <div class="col-md-2 col-sm-4">
                     <div class="sinlge-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="600ms">
                         <div class="html-skill">
                             <p>Crear redes y espacios de colaboración</p>
@@ -71,7 +71,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-2">
+                <div class="col-md-2 col-sm-4 col-sm-offset-2 col-md-offset-0">
                     <div class="sinlge-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="900ms">
                         <div class="css-skill">
                             <p>Promover la creatividad y aprendizaje del Adulto Mayor</p>
@@ -79,7 +79,7 @@
                     </div>
                 </div>
 
-                <div class="col-sm-2">
+                <div class="col-md-2 col-sm-4">
                     <div class="sinlge-skill wow fadeInDown" data-wow-duration="1000ms" data-wow-delay="1200ms">
                         <div class="wp-skill">
                             <p>Intervenir en políticas publicas para influir y recuperar espacios sociales</p>
