--- a/Resources/public/css/main.css
+++ b/Resources/public/css/main.css
@@ -44,7 +44,7 @@ h4{
 }
 
 a {
-  color: #c52d2f;
+  color: #FF6B15;
   -webkit-transition: color 300ms, background-color 300ms;
   -moz-transition: color 300ms, background-color 300ms;
   -o-transition:  color 300ms, background-color 300ms;
@@ -64,7 +64,7 @@ hr {
 .btn-primary {
   padding: 8px 20px;
   background: #FAAC58;
-  color: #fff;
+  color: #000;
   border-radius: 4px;
   border:none;
   margin-top: 10px;
@@ -183,13 +183,13 @@ body > section {
 }
 
 .top-bar {
-  padding: 10px 0;
+  padding: 3px 0;
   background: #FAAC58;
   line-height: 28px;
 }
 
 .top-number{
-  color: #fff;
+  color: #000;
 }
 
 .top-number p{
@@ -198,6 +198,16 @@ body > section {
 
 .social{
   text-align: right;
+  display: block;
+}
+
+.social b {
+  color: #000;
+}
+
+.social:hover b {
+  text-decoration: underline;
+  color: #874616;
 }
 
 .social-share{
@@ -209,12 +219,8 @@ body > section {
 
 ul.social-share li {
   display: inline-block;
-}
-
-ul.social-share li a {
-  display: inline-block;
   color: #fff;
-  background: #d56e22;
+  background: #000;
   width: 25px;
   height: 25px;
   line-height: 25px;
@@ -222,8 +228,8 @@ ul.social-share li a {
   border-radius: 2px;
 }
 
-ul.social-share li a:hover {
-  background: #FE9A2E;
+.social:hover ul.social-share li {
+  background: #874616;
   color: #fff;
 }
 
@@ -265,8 +271,7 @@ input.search-form:hover {
   border-radius: 0;
   margin-bottom: 0;
   background: #d56e22;
-  padding: 15px 0;
-  padding-bottom: 0;
+  padding: 10px 0;
 }
 
  .navbar-nav{
@@ -289,7 +294,7 @@ input.search-form:hover {
 
 .navbar-inverse .navbar-nav > li > a:hover{
 	background-color: #FAAC58;
-  color: #fff;
+  color: #000;
 }
 
 .navbar-inverse {
@@ -309,7 +314,7 @@ input.search-form:hover {
 .navbar-inverse .navbar-nav > .open > a:hover,
 .navbar-inverse .navbar-nav > .open > a:focus {
   background-color: #FAAC58;
-  color: #fff;
+  color: #000;
 }
 
 .navbar-inverse .navbar-nav .dropdown-menu {
@@ -354,9 +359,28 @@ input.search-form:hover {
 .navbar-inverse .navbar-form {
   border-top: 0;
   padding-bottom: 0;
-  padding-top: 15px;
+  padding-top: 20px;
 }
 
+.navbar-inverse .navbar-toggle {
+    border-color: #fff;
+    margin-top: 25px;
+}
+
+@media (max-width: 991px) {
+  .navbar-brand img {
+    max-width: 110px;
+    height: auto;
+  }
+
+  .navbar-nav>li {
+    padding-bottom: 15px;
+  }
+
+  .navbar-nav {
+    margin-top: 5px;
+  }
+}
 
 /*************************
 *******Home Page******
@@ -434,17 +458,20 @@ input.search-form:hover {
 #main-slider .next {
   position: absolute;
   top: 50%;
-  background-color: #FAAC58;
+  background-color: rgba(0,0,0,0.6);
   color: #fff;
   display: inline-block;
   margin-top: -25px;
-  height: 40px;
-  line-height: 40px;
-  width: 40px;
-  line-height: 40px;
+  height: 45px;
+  width: 45px;
+  line-height: 52px;
   text-align: center;
-  border-radius: 4px;
+  border-radius: 40px;
   z-index: 5;
+}
+
+#main-slider i {
+    font-size: 25px;
 }
 
 #main-slider .prev:hover,
@@ -646,6 +673,10 @@ input.search-form:hover {
   background: transparent;
   text-align: center;
   color: #fff;
+}
+
+.overlay .preview:hover {
+  text-decoration: underline;
 }
 
 .recent-work-wrap:hover .overlay {
@@ -1125,16 +1156,34 @@ a.accordion-toggle  i{
 .joomla-skill, 
 .html-skill, 
 .css-skill, 
-.wp-skill {
+.wp-skill,
+.ama-skill {
   position: absolute;
   height: 100%;
   bottom: 0;
   width:100%;
   border-radius: 100%;
-  padding: 70px 0;
+  padding: 16px;
   text-align: center;
 }
 
+@media (max-width: 991px) and (min-width: 768px){
+  .skill-wrap .sinlge-skill {
+    width: 170px;
+    height: 170px;
+  }
+}
+
+.ama-skill {
+  background: rgb(242,242,242); /* Old browsers */
+  background: -moz-linear-gradient(top, rgba(242,242,242,1) 0%, rgba(242,242,242,1) 0%, rgba(255,107,21,1) 0%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(242,242,242,1)), color-stop(0%,rgba(242,242,242,1)), color-stop(0%,rgba(255,107,21,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, rgba(242,242,242,1) 0%,rgba(242,242,242,1) 0%,rgba(255,107,21,1) 0%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top, rgba(242,242,242,1) 0%,rgba(242,242,242,1) 0%,rgba(255,107,21,1) 0%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top, rgba(242,242,242,1) 0%,rgba(242,242,242,1) 0%,rgba(255,107,21,1) 0%); /* IE10+ */
+  background: linear-gradient(to bottom, rgba(242,242,242,1) 0%,rgba(242,242,242,1) 0%,rgba(255,107,21,1) 0%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f2f2f2', endColorstr='#FF6B15',GradientType=0 ); /* IE6-9 */    
+}
 
 .joomla-skill {
   background: rgb(242,242,242); /* Old browsers */
@@ -1845,8 +1894,7 @@ ul.social_icons li  a i{
 .pricing-area .plan-action .btn-primary {
   position: relative;
   padding:5px 20px;
-  color: #fff
-;
+  color: #fff;
   margin-top: 5px;
 }
 
@@ -2184,8 +2232,8 @@ ul.faq li > div h3 {
 }
 
 #publish_date {
-  background: #c52d2f;
-  border-bottom: 5px solid #4e4e4e;
+  background: #D56E22;
+  border-bottom: 2px solid #000;
   color: #fff;
   padding: 5px 0;
   text-align: center;
@@ -2216,9 +2264,10 @@ ul.pagination > li > a i{
 }
 
 ul.pagination > li.active > a, 
-ul.pagination > li:hover > a {
-  background-color: #c52d2f !important;
-  border-color: #c52d2f !important;
+ul.pagination > li:hover > a,
+ul.pagination > li > a:focus{
+  background-color: #D56E22 !important;
+  border-color: #D56E22 !important;
   color: #fff;
 }
 
@@ -2551,10 +2600,6 @@ shortcodes page css
   padding-bottom: 20px;
 }
 
-#unete {
-  color: #fff;
-}
-
 .media-object {
   height: 180px;
 }
@@ -2625,6 +2670,8 @@ shortcodes page css
 
 .partner-img{
   width: 100%;
+  max-width: 180px;
+  margin: 0 auto;
 }
 
 #document {
@@ -2639,4 +2686,19 @@ iframe {
 
 #forum {
   padding-top: 40px;
+}
+
+.join {
+  color: #000;
+  padding-right: 10px;
+}
+
+.join:hover {
+  text-decoration: underline;
+  color: #874616;
+}
+
+.user-type {
+  padding-top: 40px;
+  padding-bottom: 70px;
 }
