--- a/Resources/views/Main/home.html.twig
+++ b/Resources/views/Main/home.html.twig
@@ -24,7 +24,7 @@
 <section id="feature" >
     <div class="container">
         <div class="center wow fadeInDown">
-            <h2>Bienvenida</h2>
+            <h2>Bienvenido</h2>
             <p class="lead">
                 AMA y trasciende, A.C. es una institución que tiene más de 10 líneas de acción para adultos mayores, y para adultos no necesariamente mayores pero interesados en el tema, entre las que seguramente encontrarás un espacio en el que podrás incorporarte a la sociedad, según tus preferencias, intereses, gustos y habilidades.
             </p>
@@ -39,8 +39,8 @@
             <h2>Imagenes Recientes</h2>
         </div>
 
-        {% for content in contents %}
         <div class="row">
+            {% for content in contents %}
             <div class="col-xs-12 col-sm-4 col-md-3">
                 <div class="recent-work-wrap">
                     <img class="img-responsive gallery" src="{{ path('tec_ayt_portal_download', {'id': content.contentId, 'class': 'Content'}) }}" alt="">
@@ -48,7 +48,7 @@
                         <div class="recent-work-inner">
                             <h3><a href="#">{{ content.name }}</a> </h3>
                             <p>{{ content.description }}</p>
-                            <a class="preview" href="{{ path('tec_ayt_portal_download', {'id': content.contentId, 'class': 'Content'}) }}" rel="prettyPhoto"><i class="fa fa-eye"></i> View</a>
+                            <a class="preview" href="{{ path('tec_ayt_portal_download', {'id': content.contentId, 'class': 'Content'}) }}" rel="prettyPhoto"><i class="fa fa-eye"></i> Ampliar imagen</a>
                         </div>
                     </div>
                 </div>
@@ -98,7 +98,7 @@
                                             <img class="img-responsive" src="{{ asset('bundles/tecaytportal/images/oldsite/galerias.jpg')}}">
                                         </div>
                                         <div class="media-body">
-                                            <h2>Socio AMA</h2>
+                                            <h2>Socio Activo AMA</h2>
                                             <p>
                                                 Miembro activo participa en las sesiones, colabora en comisiones y paga las cuotas de la Asociación.
                                             </p>
@@ -150,8 +150,8 @@
 
         <div class="partners">
             {% for sponsor in sponsors %}
-                <div class="col-md-2">
-                     <a href="{{ sponsor.url }}"><img class="img-responsive wow fadeInDown partner-img" data-wow-duration="1000ms" data-wow-delay="300ms" src="{{ path('tec_ayt_portal_download', {'id': sponsor.sponsorId, 'class': 'Sponsor'}) }}"></a>
+                <div class="col-md-3 col-sm-4 col-xs-6">
+                     <a target="_blank" href="{{ sponsor.url }}"><img class="img-responsive wow fadeInDown partner-img" data-wow-duration="1000ms" data-wow-delay="300ms" src="{{ path('tec_ayt_portal_download', {'id': sponsor.sponsorId, 'class': 'Sponsor'}) }}"></a>
                 </div>
             {% endfor %}
         </div>
