--- a/Resources/public/css/main.css
+++ b/Resources/public/css/main.css
@@ -2702,3 +2702,29 @@ iframe {
   padding-top: 40px;
   padding-bottom: 70px;
 }
+
+#error_message {
+  color: red;
+}
+
+#loading {
+  z-index: 2000;
+  background-color: rgba(0,0,0,.8);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+}
+#loading .loader {
+  display: block;
+  width: 200px;
+  height: 200px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -100px;
+  margin-left: -100px;
+}
