--- a/Resources/views/Common/header.html.twig
+++ b/Resources/views/Common/header.html.twig
@@ -12,8 +12,8 @@
                         </ul>
                     </a>
                     <b>
-                        {% if app.user and (is_granted('ROLE_FRIEND') or is_granted('ROLE_ACTIVE')) %}
-                            <a class="join pull-right" href="{{ path('tec_ayt_portal_user_view') }}"> PREFIL </a>
+                        {% if app.user.role is defined %}
+                            <a class="join pull-right" href="{{ path('tec_ayt_portal_logout') }}"> CERRAR SESION </a>
                         {% else %}
                             <a class="join pull-right" data-toggle="modal" href="javascript:void(0)" onclick="openLoginModal();"> INICIAR SESION </a>
                         {% endif %}
@@ -63,10 +63,10 @@
 
                             <div class="error"></div>
                             <div class="form loginBox">
-                                <form method="post" action="{{ path('tec_ayt_portal_login_check') }}" accept-charset="UTF-8">
-                                    <input id="email" class="form-control" type="text" placeholder="Nombre de usuario (Username)" name="_username">
+                                <form method="post" accept-charset="UTF-8">
+                                    <input id="username" class="form-control" type="text" placeholder="Nombre de usuario (Username)" name="_username">
                                     <input id="password" class="form-control" type="password" placeholder="Contraseña" name="_password">
-                                    <input class="btn btn-default btn-login" type="submit" value="Ingresar">
+                                    <input id="login_button" class="btn btn-default btn-login" type="button" value="Ingresar">
                                 </form>
                             </div>
                         </div>
@@ -75,12 +75,49 @@
                 <div class="modal-footer">
                     <div class="forgot login-footer">
                             <span>
-                                 <a href="{{ path('tec_ayt_portal_user_list') }}">Crear una Cuenta</a>
+                                 <a class="join" href="{{ path('tec_ayt_portal_user_list') }}">Crear una Cuenta</a>
                             </span>
+                    </div>
+                    <div class="forgot login-footer">
+                    <span id="error_message">
+                    </span>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
+    <div id="loading" style="display: none;">
+        <div class="loader">
+            <img src="{{ asset('bundles/tecaytportal/images/loading.gif')}}" alt="" class="img-responsive">
+        </div>
+    </div>
+    <!-- jQuery 2.1.3 -->
+    <script src="https://code.jquery.com/jquery-2.1.3.min.js" type="text/javascript"></script>
+
+    <script type="text/javascript">
+
+        $(document).ready(function() {
+            $('#login_button').click(function() {
+                $("#loading").show();
+                var data = {
+                    '_username': $("#username").val(),
+                    '_password': $("#password").val()
+                };
+
+                $.post("{{ path('tec_ayt_portal_login_check') }}", data,  function(data){
+                            if(data == '1') {
+                                location.reload();
+                            } else {
+                                $("#loading").hide();
+                                $('#error_message').empty();
+                                $('#error_message').append('Usuario o contraseña invalido');
+                            }
+                        });
+            });
+        });
+
+    </script>
+
 </header><!--/header-->
+
