--- a/Resources/views/Main/home.html.twig
+++ b/Resources/views/Main/home.html.twig
@@ -145,7 +145,7 @@
 <section id="partner">
     <div class="container">
         <div class="center wow fadeInDown">
-            <h2>Nuestros Patrocinadores</h2>
+            <h2>Instituciones Asociadas</h2>
         </div>
 
         <div class="partners">
