--- a/Resources/views/User/list.html.twig
+++ b/Resources/views/User/list.html.twig
@@ -14,7 +14,7 @@
                 <p>
                     Socio virtual con registro en la pagina WEB recibe invitaciones a eventos, publicaciones sobre temas de interés para el adulto mayor y puede colaborar con publicaciones y propuestas a través de los medios digitales de la Asociación.   Puede residir en cualquiera lugar y no tiene compromiso de asistir a reuniones o cubrir cuotas de asociado.
                 </p>
-                <a class="btn btn-primary readmore pull-right wow fadeInDown" href="{{ path('tec_ayt_portal_user_process',{'type': 1}) }}">Resgitr Socio Amigo</a>
+                <a class="btn btn-primary readmore pull-right wow fadeInDown" href="{{ path('tec_ayt_portal_user_process',{'type': 1}) }}">Registrar Socio Amigo</a>
             </div>
             <div class="col-md-4 col-xs-12 col-md-offset-2 col-xs-offset-0">
                 <img src="{{ asset('bundles/tecaytportal/images/oldsite/galerias.jpg')}}" alt="">
