--- a/Resources/views/Main/home.html.twig
+++ b/Resources/views/Main/home.html.twig
@@ -100,7 +100,8 @@
                                         <div class="media-body">
                                             <h2>Socio Activo AMA</h2>
                                             <p>
-                                                Miembro activo participa en las sesiones, colabora en comisiones y paga las cuotas de la Asociación.
+                                                Miembro activo participa en las sesiones, colabora en comisiones y paga las cuotas de la Asociación. <br>
+                                                <a href="user" class="btn btn-primary">Registrate aqui</a>
                                             </p>
                                         </div>
                                     </div>
@@ -115,7 +116,8 @@
                                             <h2>Socios Amigo AMA</h2>
                                             <p>
                                                 Socio virtual con registro en la pagina WEB recibe invitaciones a eventos, publicaciones sobre temas de interés para el adulto mayor y puede colaborar con publicaciones y propuestas a través de los medios digitales de la Asociación.   Puede residir en cualquiera lugar y no tiene compromiso de asistir a reuniones o cubrir cuotas de asociado.
-                                                Consejero Honorifico. Personas con reconocido prestigio moral y profesional que son invitadas por el Comité Directivo para colaborar y promover  la Asociación.
+                                                Consejero Honorifico. Personas con reconocido prestigio moral y profesional que son invitadas por el Comité Directivo para colaborar y promover  la Asociación. <br>
+                                                <a href="user" class="btn btn-primary">Registrate aqui</a>
                                             </p>
                                         </div>
                                     </div>
