Cambio de direccion.

--- a/Resources/views/Main/contact.html.twig
+++ b/Resources/views/Main/contact.html.twig
@@ -48,7 +48,7 @@
                 <div class="row">
                     <div class="col-sm-5 text-center">
                         <div class="gmap">
-                            <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2962.3188229668385!2d-100.32597379288022!3d25.643688763576915!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8662be423b10a0d1%3A0xccb71af7acb72d35!2sEscuela+de+Gobierno+y+Transformaci%C3%B3n+P%C3%BAblica!5e0!3m2!1ses!2smx!4v1447973206085"></iframe>
+                            <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3596.88462898339!2d-100.32586348529998!3d25.641954319805457!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8662be5695668d5d%3A0xf8a217b9eb7b2f5f!2sAv.+Eugenio+Garza+Lag%C3%BCera%2C+Zona+Valle+Oriente%2C+San+Pedro+Garza+Garc%C3%ADa%2C+N.L.!5e0!3m2!1sen!2smx!4v1449111528122"></iframe>
                         </div>
                     </div>
 
@@ -56,9 +56,8 @@
                         <ul class="row">
                             <li class="col-sm-12">
                                 <address>
-                                    <h4>Escuela de Gobierno y Transformación Pública</h4>
-                                    <p><i class="fa fa-map-marker"></i> Eugenio Garza Lagüera y Rufino Tamayo, Valle Oriente
-                                        66269 San Pedro Garza García, N.L.</p>
+                                    <h4>EGADE Business School</h4>
+                                    <p><i class="fa fa-map-marker"></i> Eugenio Garza Lagüera y Rufino Tamayo, Valle Oriente, San Pedro Garza García 66269, N.L.</p>
                                     <p><i class="fa fa-phone"></i> Teléfono: 81 147 48 655</p>
                                     <p><i class="fa fa-envelope"></i> Email: amaytrasciende@gmail.com</p>
                                 </address>
