--- a/Resources/views/Link/list.html.twig
+++ b/Resources/views/Link/list.html.twig
@@ -31,7 +31,7 @@
                                </thead>
                                <tbody>
 
-                               {% for links in links %}
+                               {% for link in freeLinks %}
                                    <tr>
                                        <td>{{ link.name }}</td>
                                        <td>{{ link.description }}</td>
