--- a/Resources/views/Link/list.html.twig
+++ b/Resources/views/Link/list.html.twig
@@ -42,6 +42,9 @@
                        </div><!-- /.box-body -->
                    </div>
                </div>
+            
+            </div>
+         </section>
 
 
 {% endblock %}
