--- a/Resources/views/User/form.html.twig
+++ b/Resources/views/User/form.html.twig
@@ -4,8 +4,25 @@
 {% block content %}
     <section class="user-type">
         <div class="container">
+            <h1>Nuevo Usuario</h1>
             {% form_theme form 'TecAytPortalBundle:Form:fields.html.twig' %}
             {{ form(form) }}
         </div>
     </section>
+{% endblock %}
+
+{% block footerAssets %}
+    {{ parent() }}
+    <!-- Include Date picker -->
+    <script type="text/javascript" src="{{ asset('bundles/tecaytportal/plugins/datepicker/bootstrap-datepicker.js') }}"></script>
+    <link rel="stylesheet" type="text/css" href="{{ asset('bundles/tecaytportal/plugins/datepicker/datepicker3.css') }}" />
+
+    <script>
+        $(document).ready(function() {
+            $('#user_birthDate').datepicker({
+                format: "yyyy-mm-dd",
+                startView: 2
+            });
+        });
+    </script>
 {% endblock %}
