Correccion de links en botones

--- a/Resources/views/Main/home.html.twig
+++ b/Resources/views/Main/home.html.twig
@@ -101,7 +101,7 @@
                                             <h2>Socio Activo AMA</h2>
                                             <p>
                                                 Miembro activo participa en las sesiones, colabora en comisiones y paga las cuotas de la Asociación. <br>
-                                                <a href="user" class="btn btn-primary">Registrate aqui</a>
+                                                <a href="{{ path('tec_ayt_portal_user_list') }}" class="btn btn-primary">Registrate aqui</a>
                                             </p>
                                         </div>
                                     </div>
@@ -117,7 +117,7 @@
                                             <p>
                                                 Socio virtual con registro en la pagina WEB recibe invitaciones a eventos, publicaciones sobre temas de interés para el adulto mayor y puede colaborar con publicaciones y propuestas a través de los medios digitales de la Asociación.   Puede residir en cualquiera lugar y no tiene compromiso de asistir a reuniones o cubrir cuotas de asociado.
                                                 Consejero Honorifico. Personas con reconocido prestigio moral y profesional que son invitadas por el Comité Directivo para colaborar y promover  la Asociación. <br>
-                                                <a href="user" class="btn btn-primary">Registrate aqui</a>
+                                                <a href="{{ path('tec_ayt_portal_user_list') }}" class="btn btn-primary">Registrate aqui</a>
                                             </p>
                                         </div>
                                     </div>
