--- a/Resources/views/Main/about.html.twig
+++ b/Resources/views/Main/about.html.twig
@@ -12,20 +12,11 @@
             </div>
 
             <!-- about us slider -->
-            <div id="about-slider">
-                <div class="carousel slide">
-                    <!-- Indicators -->
-                    <ol class="carousel-indicators visible-xs">
-                        <li data-target="#carousel-slider" data-slide-to="0" class="active"></li>
-                    </ol>
 
-                    <div class="carousel-inner">
-                        <div class="item active">
-                            <img src="{{ asset('bundles/tecaytportal/images/oldsite/Nosotros.png')}}" class="img-responsive" alt="">
-                        </div>
-                    </div>
-                </div> <!--/#carousel-slider-->
-            </div><!--/#about-slider-->
+            <div class="center wow fadeInDown">
+                    <img src="{{ asset('bundles/tecaytportal/images/Curso.png')}}" style="max-width: 100%;">
+            </div>
+
 
             <!-- Our Skill -->
             <div class="skill-wrap clearfix">
