--- a/Resources/views/Common/layout.html.twig
+++ b/Resources/views/Common/layout.html.twig
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Ama y treasciende</title>
+    <title>AMA y trasciende</title>
     {% block headerAssets %}
         <!-- core CSS -->
         <link href="{{ asset('bundles/tecaytportal/css/bootstrap.min.css') }}" rel="stylesheet">
