--- a/Resources/views/Main/contact.html.twig
+++ b/Resources/views/Main/contact.html.twig
@@ -9,7 +9,7 @@
             </div>
             <div class="row contact-wrap">
                 <div class="status alert alert-success" style="display: none"></div>
-                <form id="main-contact-form" class="contact-form" name="contact-form" method="post" action=""{{ path('tec_ayt_portal_sendmail') }}">
+                <form id="main-contact-form" class="contact-form" name="contact-form" method="post" action="{{ path('tec_ayt_portal_main_sendmail') }}">
                     <div class="col-sm-5 col-sm-offset-1">
                         <div class="form-group">
                             <label>Nombre *</label>
