--- a/Resources/views/Main/contact.html.twig
+++ b/Resources/views/Main/contact.html.twig
@@ -21,7 +21,7 @@
                         </div>
                         <div class="form-group">
                             <label>Teléfono</label>
-                            <input type="number" class="form-control">
+                            <input type="number" class="form-control" name="number">
                         </div>
                         <div class="form-group">
                             <label>Asunto *</label>
