--- a/Resources/views/Link/list.html.twig
+++ b/Resources/views/Link/list.html.twig
@@ -32,7 +32,7 @@
 
                                {% for link in freeLinks %}
                                    <tr>
-                                       <td>{{ link.description }}</td>
+                                       <td><a href="{{ link.url }}" target="_blank">{{ link.description }}</a></td>
                                    </tr>
                                {% endfor %}
                                </tbody>
