--- a/Resources/views/Common/footer.html.twig
+++ b/Resources/views/Common/footer.html.twig
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                &copy; 2015 <a target="_blank" href="{{ path('tec_ayt_portal_main_home') }}" title="Free Twitter Bootstrap WordPress Themes and HTML templates">Ama y Treasciende</a> by ITESM
+                &copy; 2015 <a target="_blank" href="{{ path('tec_ayt_portal_main_home') }}">AMA y trasciende</a> by ITESM
             </div>
             <div class="col-sm-6">
                 <ul class="pull-right">
