Navbar highlight fix

--- a/Resources/views/Link/list.html.twig
+++ b/Resources/views/Link/list.html.twig
@@ -1,4 +1,4 @@
-{% set navbarActive = 'links' %}
+{% set navbarActive = 'link' %}
 {% extends 'TecAytPortalBundle:Common:layout.html.twig' %}
 
 {% block headerAssets %}
