--- a/Resources/views/Common/header.html.twig
+++ b/Resources/views/Common/header.html.twig
@@ -13,10 +13,10 @@
                     </a>
                     <b>
                         {% if app.user.role is defined %}
-                            <a class="join pull-right" href="{{ path('tec_ayt_portal_logout') }}"> CERRAR SESION </a>
+                            <a class="join pull-right" href="{{ path('tec_ayt_portal_logout') }}"> CERRAR SESIÓN </a>
                         {% else %}
-                            <a class="join pull-right" href="{{ path('tec_ayt_portal_user_list') }}"> UNETE </a>
-                            <a class="join pull-right" data-toggle="modal" href="javascript:void(0)" onclick="openLoginModal();"> INICIAR SESION </a>
+                            <a class="join pull-right" href="{{ path('tec_ayt_portal_user_list') }}"> ÚNETE </a>
+                            <a class="join pull-right" data-toggle="modal" href="javascript:void(0)" onclick="openLoginModal();"> INICIAR SESIÓN </a>
                         {% endif %}
                     </b>
                 </div>
@@ -41,7 +41,7 @@
                     <li {% if navbarActive == 'about' %}class="active"{% endif %}><a href="{{ path('tec_ayt_portal_main_about') }}">Nosotros</a></li>
                     <li {% if navbarActive == 'event' %}class="active"{% endif %}><a href="{{ path('tec_ayt_portal_event_list') }}">Eventos</a></li>
                     <li {% if navbarActive == 'document' %}class="active"{% endif %}><a href="{{ path('tec_ayt_portal_docuemt_list') }}">Documentos</a></li>
-                    <li {% if navbarActive == 'gallery' %}class="active"{% endif %}><a href="{{ path('tec_ayt_portal_album_list') }}">Galeria</a></li>
+                    <li {% if navbarActive == 'gallery' %}class="active"{% endif %}><a href="{{ path('tec_ayt_portal_album_list') }}">Galería</a></li>
                     <li {% if navbarActive == 'forum' %}class="active"{% endif %}><a href="{{ path('tec_ayt_portal_forum_list') }}">Foro</a></li>
                     <li {% if navbarActive == 'link' %}class="active"{% endif %}><a href="{{ path('tec_ayt_portal_link_list') }}">Links</a></li>
                     <li {% if navbarActive == 'blog' %}class="active"{% endif %}><a href="{{ path('tec_ayt_portal_main_blog') }}">Blog</a></li>
