Mas spell check

--- a/Resources/views/Common/footer.html.twig
+++ b/Resources/views/Common/footer.html.twig
@@ -8,7 +8,7 @@
                 <ul class="pull-right">
                     <li><a href="{{ path('tec_ayt_portal_main_home') }}">Home</a></li>
                     <li><a href="{{ path('tec_ayt_portal_main_about') }}">Nosotros</a></li>
-                    <li><a href="{{ path('tec_ayt_portal_main_contact') }}">Contactanos</a></li>
+                    <li><a href="{{ path('tec_ayt_portal_main_contact') }}">Contáctanos</a></li>
                 </ul>
             </div>
         </div>
