--- a/Resources/views/Main/home.html.twig
+++ b/Resources/views/Main/home.html.twig
@@ -36,7 +36,7 @@
 <section id="recent-works">
     <div class="container">
         <div class="center wow fadeInDown">
-            <h2>Imagenes Recientes</h2>
+            <h2>Imágenes Recientes</h2>
         </div>
 
         <div class="row">
@@ -101,7 +101,7 @@
                                             <h2>Socio Activo AMA</h2>
                                             <p>
                                                 Miembro activo participa en las sesiones, colabora en comisiones y paga las cuotas de la Asociación. <br>
-                                                <a href="{{ path('tec_ayt_portal_user_list') }}" class="btn btn-primary">Registrate aqui</a>
+                                                <a href="{{ path('tec_ayt_portal_user_list') }}" class="btn btn-primary">Regístrate aquí</a>
                                             </p>
                                         </div>
                                     </div>
@@ -115,9 +115,9 @@
                                         <div class="media-body">
                                             <h2>Socios Amigo AMA</h2>
                                             <p>
-                                                Socio virtual con registro en la pagina WEB recibe invitaciones a eventos, publicaciones sobre temas de interés para el adulto mayor y puede colaborar con publicaciones y propuestas a través de los medios digitales de la Asociación.   Puede residir en cualquiera lugar y no tiene compromiso de asistir a reuniones o cubrir cuotas de asociado.
+                                                Socio virtual con registro en la página WEB recibe invitaciones a eventos, publicaciones sobre temas de interés para el adulto mayor y puede colaborar con publicaciones y propuestas a través de los medios digitales de la Asociación.   Puede residir en cualquiera lugar y no tiene compromiso de asistir a reuniones o cubrir cuotas de asociado.
                                                 Consejero Honorifico. Personas con reconocido prestigio moral y profesional que son invitadas por el Comité Directivo para colaborar y promover  la Asociación. <br>
-                                                <a href="{{ path('tec_ayt_portal_user_list') }}" class="btn btn-primary">Registrate aqui</a>
+                                                <a href="{{ path('tec_ayt_portal_user_list') }}" class="btn btn-primary">Regístrate aquí</a>
                                             </p>
                                         </div>
                                     </div>
