--- a/Resources/views/Album/list.html.twig
+++ b/Resources/views/Album/list.html.twig
@@ -6,7 +6,7 @@
     <section id="album">
         <div class="container">
             <div class="center">
-                <h2>Albumes de fotos</h2>
+                <h2>Álbumes de fotos</h2>
             </div>
 
             <div class="row">
