--- a/Resources/views/Main/contact.html.twig
+++ b/Resources/views/Main/contact.html.twig
@@ -5,7 +5,7 @@
     <section id="contact-page">
         <div class="container contact-message">
             <div class="center message">
-                <h2>Mandanos un mensaje</h2>
+                <h2>Mándanos un mensaje</h2>
             </div>
             <div class="row contact-wrap">
                 <div class="status alert alert-success" style="display: none"></div>
