--- a/Resources/views/Topic/list.html.twig
+++ b/Resources/views/Topic/list.html.twig
@@ -4,7 +4,7 @@
 {% block content %}
     <section id="forum" class="container">
         <div class="center">
-            <h2>Foro AMA y trasciende</h2>
+            <h2>En esta seccion puedes hacer o responder preguntas sobre temas de interes para el adulto mayor</h2>
             {% if app.user.role is defined %}
             <a class="btn btn-primary readmore pull-right" href="{{ path('tec_ayt_portal_forum_process') }}">Crear un tema nuevo <i class="fa fa-plus"></i></a>
             {% endif %}
