--- a/Resources/views/User/list.html.twig
+++ b/Resources/views/User/list.html.twig
@@ -22,7 +22,7 @@
                 <p>
                     Miembro activo participa en las sesiones, colabora en comisiones y paga las cuotas de la Asociación.
                 </p>
-                <a class="btn btn-primary readmore pull-right wow fadeInDown" href="{{ path('tec_ayt_portal_user_process',{'type': 2}) }}">Registrar Socio Activo</a>
+                <a class="btn btn-primary readmore pull-right wow fadeInDown" href="{{ path('tec_ayt_portal_user_process',{'type': 2}) }}">Presentar Solicitud</a>
             </div>
         </div>
     </section>
