--- a/Resources/views/Main/home.html.twig
+++ b/Resources/views/Main/home.html.twig
@@ -93,8 +93,9 @@
                                         <div class="media-body">
                                             <h2>Socios Amigo AMA</h2>
                                             <p>
-                                                Socio virtual con registro en la página WEB recibe invitaciones a eventos, publicaciones sobre temas de interés para el adulto mayor y puede colaborar con publicaciones y propuestas a través de los medios digitales de la Asociación.   Puede residir en cualquiera lugar y no tiene compromiso de asistir a reuniones o cubrir cuotas de asociado.
-                                                Consejero Honorifico. Personas con reconocido prestigio moral y profesional que son invitadas por el Comité Directivo para colaborar y promover  la Asociación. <br>
+                                                Socio virtual con registro en la página WEB recibe invitaciones a eventos, publicaciones sobre temas de interés para el adulto mayor y puede colaborar con publicaciones y propuestas a través de los medios digitales de la Asociación.
+                                                Puede residir en cualquiera lugar y no tiene compromiso de asistir a reuniones o cubrir cuotas de asociado.
+                                                <br>
                                                 <a href="{{ path('tec_ayt_portal_user_list') }}" class="btn btn-primary">Regístrate aquí</a>
                                             </p>
                                         </div>
